# MarkdownToPdf

./: .gitignore  AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
.cursor/plans/: tauri_markdown_to_pdf_app_448b404f.plan.md
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: DropZone.tsx
